--- a/Coditech.Project/API/Coditech.Engine.MediaManager/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.MediaManager/appsettings.json
@@ -9,7 +9,7 @@
     "CoditechDatabase": "Server=108.181.194.83;Database=CoditechStageDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
   },
   "appsettings": {
-    "ValidateRequestAPI": "false",
+    "ValidateRequestAPI": "true",
     "CoditechApiDomainName": "coditech.co.in",
     "CoditechApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //To specify Coditech API request timeout in milliseconds
