--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -35,7 +35,7 @@
     "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
-    "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
+    "ApplicationLayoutBackground": "../assets/images/GymImage.jpg",
     "IsDefaultTheme": "true",
     "ThemeColor": "red",
     "DefaultDashboardDataDays": "30",
