--- a/.github/workflows/coditech_stage.yml
+++ b/.github/workflows/coditech_stage.yml
@@ -40,6 +40,11 @@ on:
          required: true
          default: false
          type: boolean
+       hospitalmanagementsystem_api_deploy:
+         description: 'Deloy HospitalManagementSystem API'
+         required: true
+         default: false
+         type: boolean
 
 jobs:
   coditech_build:
@@ -229,3 +234,29 @@ jobs:
            Start-WebSite -Name "pahpc-api-organisation"
            # Start the associated app pool
            Start-WebAppPool -Name "pahpc-api-organisation"
+           
+  hospitalmanagementsystem_api_deploy:
+    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    needs: coditech_build
+    if: github.event.inputs.hospitalmanagementsystem_api_deploy == 'true'
+
+    steps:
+      - name: Stop hospitalmanagementsystem IIS Site and App Pool
+        run: |
+           # Stop the IIS site
+           Stop-WebSite -Name "pahpc-api-hospitalmanagementsystem" 
+           # Stop the associated app pool
+           Stop-WebAppPool -Name "pahpc-api-hospitalmanagementsystem"
+
+           # Wait for a few seconds (optional, if needed)
+           Start-Sleep -Seconds 5
+
+      - name: Copy Build file
+        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.HospitalManagementSystem\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\HMS\ -Recurse -Force 
+
+      - name: Start hospitalmanagementsystem IIS Site and App Pool
+        run: |
+           # Start the IIS site
+           Start-WebSite -Name "pahpc-api-hospitalmanagementsystem"
+           # Start the associated app pool
+           Start-WebAppPool -Name "pahpc-api-hospitalmanagementsystem"
