--- a/.github/workflows/coditech_stage.yml
+++ b/.github/workflows/coditech_stage.yml
@@ -45,6 +45,11 @@ on:
          required: true
          default: false
          type: boolean
+       dbtm_api_deploy:
+         description: 'Deloy DBTM API'
+         required: true
+         default: false
+         type: boolean
 
 jobs:
   coditech_build:
@@ -260,3 +265,29 @@ jobs:
            Start-WebSite -Name "pahpc-api-hospitalmanagementsystem"
            # Start the associated app pool
            Start-WebAppPool -Name "pahpc-api-hospitalmanagementsystem"
+
+  dbtm_api_deploy:
+    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    needs: coditech_build
+    if: github.event.inputs.dbtm_api_deploy == 'true'
+
+    steps:
+      - name: Stop dbtm IIS Site and App Pool
+        run: |
+           # Stop the IIS site
+           Stop-WebSite -Name "pahpc-api-dbtm" 
+           # Stop the associated app pool
+           Stop-WebAppPool -Name "pahpc-api-dbtm"
+
+           # Wait for a few seconds (optional, if needed)
+           Start-Sleep -Seconds 5
+
+      - name: Copy Build file
+        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.DBTM\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\DBTM\ -Recurse -Force 
+
+      - name: Start dbtm IIS Site and App Pool
+        run: |
+           # Start the IIS site
+           Start-WebSite -Name "pahpc-api-dbtm"
+           # Start the associated app pool
+           Start-WebAppPool -Name "pahpc-api-dbtm"
