Code Check-in for DBTMNewRegistration

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -39,7 +39,8 @@
     "IsDefaultTheme": "true",
     "ThemeColor": "red",
     "DefaultDashboardDataDays": "30",
-    "MaintenanceMode": "false"
+    "MaintenanceMode": "false",
+    "ApplicationCode": "DBTM"
   },
   "AllowedHosts": "*"
 }
