code for insert DBTM

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 /Coditech.Project/API/Coditech.Engine.DBTM/obj
 /Coditech.Project/API/Coditech.Engine.DBTM/Coditech.Engine.DBTM.csproj.user
 /Coditech.Project/API/Coditech.Engine.DBTM/bin
+/Coditech.Project/API/Coditech.Engine.DBTM/Data/logs
