--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@
 /Coditech.Project/API/Coditech.Engine.DBTM/Coditech.Engine.DBTM.csproj.user
 /Coditech.Project/API/Coditech.Engine.DBTM/bin
 /Coditech.Project/API/Coditech.Engine.DBTM/Data/logs
+/Coditech.Project/API/Coditech.Engine.Payment/obj
+/Coditech.Project/API/Coditech.Engine.Payment/bin
+/Coditech.Project/API/Coditech.Engine.Payment/Coditech.Engine.Payment.csproj.user
