Code check in for DBTMMenuCode

--- a/Coditech.Project/API/Coditech.Engine.DBTM/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.DBTM/appsettings.json
@@ -18,7 +18,8 @@
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
-    "EnableFileLogging": "0"
+    "EnableFileLogging": "0",
+    "DBTMMenuCode": "Dashboard,GeneralDashboard,Employee,EmployeeList,DBTMDeviceRegistration,DBTMTrainerDetails,DBTMTrainers,DBTMTraineeDetails,DBTMTrainee,DBTMAssignments,DBTMBatch,DBTMTraineeAssignment,DBTMBatchActivity"
   },
   "AllowedHosts": "*"
 }
