--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
@@ -12,6 +12,8 @@
     "CoditechMediaManagerApiRootUri": "https://localhost:7103",
     "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174",
     "CoditechGazetteApiRootUri": "https://localhost:7046",
-    "CoditechDBTMApiRootUri": "https://localhost:7239"
+    "CoditechDBTMApiRootUri": "https://localhost:7239",
+    "CoditechPaymentApiRootUri": "https://localhost:5049"
+
   }
 }
