--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@
 /Coditech.Project/API/Coditech.Engine.Payment/obj
 /Coditech.Project/API/Coditech.Engine.Payment/bin
 /Coditech.Project/API/Coditech.Engine.Payment/Coditech.Engine.Payment.csproj.user
+/Coditech.Project/Admin/Coditech.Admin.Core/bin
+/Coditech.Project/Admin/Coditech.Admin.Core/obj
