Code Check In For -OrganisationCentrewiseJoiningCode

--- a/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
@@ -20,7 +20,8 @@
     "CoditechApiUriKeyValueSeparator": "~",
     "EnableFileLogging": "0",
     "ApiDomainRequestKey": "954FA6B4-132F-439E-BEA9-48730D3442B0",
-    "ResetPasswordExpriedTimeInMinute": "10"
+    "ResetPasswordExpriedTimeInMinute": "10",
+    "JoiningCodeLength":  "5"
   },
   "AllowedHosts": "*"
 }
