--- a/Coditech.Project/API/Coditech.Engine.DBTM/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.DBTM/appsettings.json
@@ -19,7 +19,7 @@
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
     "EnableFileLogging": "0",
-    "DBTMMenuCode": "Dashboard,GeneralDashboard,Employee,EmployeeList,DBTMDeviceDetails,DBTMDeviceRegistration,DBTMTrainerDetails,DBTMTrainers,DBTMTraineeDetails,DBTMTrainee,DBTMActiveTrainees,DBTMInActiveTrainees,DBTMAssignments,DBTMBatch,DBTMTraineeAssignment,DBTMBatchActivity,DBTMSetting,DBTMMySubcription"
+    "DBTMDirectorMenuCode": "Dashboard,GeneralDashboard,Employee,EmployeeList,DBTMDeviceDetails,DBTMDeviceRegistration,DBTMTrainerDetails,DBTMTrainers,DBTMTraineeDetails,DBTMTrainee,DBTMActiveTrainees,DBTMInActiveTrainees,DBTMAssignments,DBTMBatch,DBTMTraineeAssignment,DBTMBatchActivity,DBTMSetting,DBTMMySubcription"
   },
   "AllowedHosts": "*"
 }
