--- a/.github/workflows/coditech_stage.yml
+++ b/.github/workflows/coditech_stage.yml
@@ -15,11 +15,11 @@ on:
          required: true
          default: true
          type: boolean
-       # gymmanagementsystem_api_deploy:
-       #   description: 'Deploy GymManagementSystem API'
-       #   required: true
-       #   default: true
-       #   type: boolean
+       gymmanagementsystem_api_deploy:
+         description: 'Deploy GymManagementSystem API'
+         required: true
+         default: true
+         type: boolean
        mediamanager_api_deploy:
          description: 'Deploy MediaManager API'
          required: true
@@ -30,11 +30,11 @@ on:
          required: true
          default: true
          type: boolean
-       # hospitalmanagementsystem_api_deploy:
-       #   description: 'Deploy HospitalManagementSystem API'
-       #   required: true
-       #   default: true
-       #   type: boolean
+       hospitalmanagementsystem_api_deploy:
+         description: 'Deploy HospitalManagementSystem API'
+         required: true
+         default: true
+         type: boolean
        payment_api_deploy:
          description: 'Deploy Payment API'
          required: true
@@ -94,33 +94,33 @@ jobs:
           # Start the associated app pool
           Start-WebAppPool -Name "coditech-stage-admin"
 
-  # gymmanagementsystem_api_deploy:
-  #   runs-on: [self-hosted, Windows, x64, coditech_Stage]
-  #   needs: coditech_build
-  #   if: github.event.inputs.gymmanagementsystem_api_deploy == 'true'
+  gymmanagementsystem_api_deploy:
+    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    needs: coditech_build
+    if: github.event.inputs.gymmanagementsystem_api_deploy == 'true'
 
-  #   steps:
-  #     - name: Stop GymManagementSystem IIS Site and App Pool
-  #       run: |
-  #         # Stop the IIS site
-  #         Stop-WebSite -Name "pahpc-api-gymmanagementsystem" 
+    steps:
+      - name: Stop GymManagementSystem IIS Site and App Pool
+        run: |
+          # Stop the IIS site
+          Stop-WebSite -Name "coditech-stage-api-gymmanagementsystem" 
 
-  #         # Stop the associated app pool
-  #         Stop-WebAppPool -Name "pahpc-api-gymmanagementsystem"
+          # Stop the associated app pool
+          Stop-WebAppPool -Name "coditech-stage-api-gymmanagementsystem"
 
-  #         # Wait for a few seconds (optional, if needed)
-  #         Start-Sleep -Seconds 5
+          # Wait for a few seconds (optional, if needed)
+          Start-Sleep -Seconds 5
 
-  #     - name: Copy Build file
-  #       run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.GymManagementSystem\bin\Release\net8.0\*  -Destination C:\HostingSites\CoditechStage\GMS\ -Recurse -Force 
+      - name: Copy Build file
+        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.GymManagementSystem\bin\Release\net8.0\*  -Destination C:\HostingSites\CoditechStage\GMS\ -Recurse -Force 
 
-  #     - name: Start GymManagementSystem IIS Site and App Pool
-  #       run: |
-  #         # Start the IIS site
-  #         Start-WebSite -Name "pahpc-api-gymmanagementsystem"
+      - name: Start GymManagementSystem IIS Site and App Pool
+        run: |
+          # Start the IIS site
+          Start-WebSite -Name "coditech-stage-api-gymmanagementsystem"
 
-  #         # Start the associated app pool
-  #         Start-WebAppPool -Name "pahpc-api-gymmanagementsystem"
+          # Start the associated app pool
+          Start-WebAppPool -Name "coditech-stage-api-gymmanagementsystem"
 
   mediamanager_api_deploy:
     runs-on: [self-hosted, Windows, x64, coditech_Stage]
@@ -175,31 +175,31 @@ jobs:
            # Start the associated app pool
            Start-WebAppPool -Name "coditech-stage-api-organisation"
            
-  # hospitalmanagementsystem_api_deploy:
-  #   runs-on: [self-hosted, Windows, x64, coditech_Stage]
-  #   needs: coditech_build
-  #   if: github.event.inputs.hospitalmanagementsystem_api_deploy == 'true'
+  hospitalmanagementsystem_api_deploy:
+    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    needs: coditech_build
+    if: github.event.inputs.hospitalmanagementsystem_api_deploy == 'true'
 
-  #   steps:
-  #     - name: Stop hospitalmanagementsystem IIS Site and App Pool
-  #       run: |
-  #          # Stop the IIS site
-  #          Stop-WebSite -Name "pahpc-api-hospitalmanagementsystem" 
-  #          # Stop the associated app pool
-  #          Stop-WebAppPool -Name "pahpc-api-hospitalmanagementsystem"
+    steps:
+      - name: Stop hospitalmanagementsystem IIS Site and App Pool
+        run: |
+           # Stop the IIS site
+           Stop-WebSite -Name "coditech-stage-api-hospitalmanagementsystem" 
+           # Stop the associated app pool
+           Stop-WebAppPool -Name "coditech-stage-api-hospitalmanagementsystem"
 
-  #          # Wait for a few seconds (optional, if needed)
-  #          Start-Sleep -Seconds 5
+           # Wait for a few seconds (optional, if needed)
+           Start-Sleep -Seconds 5
 
-  #     - name: Copy Build file
-  #       run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.HospitalManagementSystem\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\HMS\ -Recurse -Force 
+      - name: Copy Build file
+        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.HospitalManagementSystem\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\HMS\ -Recurse -Force 
 
-  #     - name: Start hospitalmanagementsystem IIS Site and App Pool
-  #       run: |
-  #          # Start the IIS site
-  #          Start-WebSite -Name "pahpc-api-hospitalmanagementsystem"
-  #          # Start the associated app pool
-  #          Start-WebAppPool -Name "pahpc-api-hospitalmanagementsystem"
+      - name: Start hospitalmanagementsystem IIS Site and App Pool
+        run: |
+           # Start the IIS site
+           Start-WebSite -Name "coditech-stage-api-hospitalmanagementsystem"
+           # Start the associated app pool
+           Start-WebAppPool -Name "coditech-stage-api-hospitalmanagementsystem"
 
   payment_api_deploy:
     runs-on: [self-hosted, Windows, x64, coditech_Stage]
