--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -42,7 +42,8 @@
     "ThemeColor": "red",
     "DefaultDashboardDataDays": "30",
     "MaintenanceMode": "false",
-    "ApplicationCode": ""
+    "ApplicationCode": "",
+    "DashboardUrl": "/dashboard/index"
   },
   "AllowedHosts": "*"
 }
