--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -25,6 +25,10 @@
 		  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
+		<Content Update="wwwroot\js\Coditech\Organisation\OrganisationCentrewiseJoiningCode.js">
+		  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
