--- a/.github/workflows/coditech_stage.yml
+++ b/.github/workflows/coditech_stage.yml
@@ -1,4 +1,4 @@
-name: Deploy-Stage-Coditech
+name: Deploy-PAHPC-Coditech
 
 on: 
 
@@ -30,27 +30,22 @@ on:
          required: true
          default: true
          type: boolean
-       hospitalmanagementsystem_api_deploy:
-         description: 'Deploy HospitalManagementSystem API'
-         required: true
-         default: true
-         type: boolean
-       payment_api_deploy:
-         description: 'Deploy Payment API'
-         required: true
-         default: true
-         type: boolean
+       # payment_api_deploy:
+       #   description: 'Deploy Payment API'
+       #   required: true
+       #   default: true
+       #   type: boolean
 
 jobs:
   coditech_build:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    runs-on: [self-hosted, Windows, x64, coditech_pahpc]
     if: github.event.inputs.coditech_build == 'true'
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          ref: Stage
+          ref: GymProduction
 
       - name: Restore Packages
         run: | 
@@ -61,7 +56,7 @@ jobs:
            & "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\MSBuild\\Current\\Bin\\msbuild.exe"  './Coditech.Project/Coditech.Project.sln' /p:DeployOnBuild=true /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:publishUrl="./publish/Release" /p:Configuration=Release /p:TransformConfigFiles=false
 
   admin_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    runs-on: [self-hosted, Windows, x64, coditech_pahpc]
     needs: coditech_build
     if: github.event.inputs.admin_deploy == 'true'
     
@@ -69,33 +64,33 @@ jobs:
       - name: Stop ADMIN IIS Site and App Pool
         run: |
           # Stop the IIS site
-          Stop-WebSite -Name "coditech-stage-admin" 
+          Stop-WebSite -Name "pahpc-admin" 
 
           # Stop the associated app pool
-          Stop-WebAppPool -Name "coditech-stage-admin"
+          Stop-WebAppPool -Name "pahpc-admin"
 
           # Wait for a few seconds (optional, if needed)
           Start-Sleep -Seconds 5
 
       - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\bin\Release\net8.0\*  -Destination C:\HostingSites\CoditechStage\Admin\ -Recurse -Force
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\bin\Release\net8.0\*  -Destination C:\HostingSites\PAHPC\Admin\ -Recurse -Force
       - name: Copy Build webroot
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\wwwroot\*  -Destination C:\HostingSites\CoditechStage\Admin\wwwroot\ -Recurse -Force
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\wwwroot\*  -Destination C:\HostingSites\PAHPC\Admin\wwwroot\ -Recurse -Force
       - name: Copy Build views
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\Views\*  -Destination C:\HostingSites\CoditechStage\Admin\Views\ -Recurse -Force
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\Views\*  -Destination C:\HostingSites\PAHPC\Admin\Views\ -Recurse -Force
       - name: Copy Build report folder
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\Reports\*  -Destination C:\HostingSites\CoditechStage\Admin\Reports\ -Recurse -Force
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\Reports\*  -Destination C:\HostingSites\PAHPC\Admin\Reports\ -Recurse -Force
 
       - name: Start ADMIN IIS Site and App Pool
         run: |
           # Start the IIS site
-          Start-WebSite -Name "coditech-stage-admin"
+          Start-WebSite -Name "pahpc-admin"
 
           # Start the associated app pool
-          Start-WebAppPool -Name "coditech-stage-admin"
+          Start-WebAppPool -Name "pahpc-admin"
 
   gymmanagementsystem_api_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    runs-on: [self-hosted, Windows, x64, coditech_pahpc]
     needs: coditech_build
     if: github.event.inputs.gymmanagementsystem_api_deploy == 'true'
 
@@ -103,27 +98,27 @@ jobs:
       - name: Stop GymManagementSystem IIS Site and App Pool
         run: |
           # Stop the IIS site
-          Stop-WebSite -Name "coditech-stage-api-gymmanagementsystem" 
+          Stop-WebSite -Name "pahpc-api-gymmanagementsystem" 
 
           # Stop the associated app pool
-          Stop-WebAppPool -Name "coditech-stage-api-gymmanagementsystem"
+          Stop-WebAppPool -Name "pahpc-api-gymmanagementsystem"
 
           # Wait for a few seconds (optional, if needed)
           Start-Sleep -Seconds 5
 
       - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.GymManagementSystem\bin\Release\net8.0\*  -Destination C:\HostingSites\CoditechStage\GMS\ -Recurse -Force 
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.GymManagementSystem\bin\Release\net8.0\*  -Destination C:\HostingSites\PAHPC\GMS\ -Recurse -Force 
 
       - name: Start GymManagementSystem IIS Site and App Pool
         run: |
           # Start the IIS site
-          Start-WebSite -Name "coditech-stage-api-gymmanagementsystem"
+          Start-WebSite -Name "pahpc-api-gymmanagementsystem"
 
           # Start the associated app pool
-          Start-WebAppPool -Name "coditech-stage-api-gymmanagementsystem"
+          Start-WebAppPool -Name "pahpc-api-gymmanagementsystem"
 
   mediamanager_api_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    runs-on: [self-hosted, Windows, x64, coditech_pahpc]
     needs: coditech_build
     if: github.event.inputs.mediamanager_api_deploy == 'true'
 
@@ -132,25 +127,25 @@ jobs:
       - name: Stop MediaManager IIS Site and App Pool
         run: |
            # Stop the IIS site
-           Stop-WebSite -Name "coditech-stage-api-mediamanager" 
+           Stop-WebSite -Name "pahpc-api-mediamanager" 
            # Stop the associated app pool
-           Stop-WebAppPool -Name "coditech-stage-api-mediamanager"
+           Stop-WebAppPool -Name "pahpc-api-mediamanager"
 
            # Wait for a few seconds (optional, if needed)
            Start-Sleep -Seconds 5
 
       - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.MediaManager\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\MediaManager\ -Recurse -Force 
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.MediaManager\bin\Release\net8.0\* -Destination C:\HostingSites\PAHPC\MediaManager\ -Recurse -Force 
 
       - name: Start MediaManager IIS Site and App Pool
         run: |
            # Start the IIS site
-           Start-WebSite -Name "coditech-stage-api-mediamanager"
+           Start-WebSite -Name "pahpc-api-mediamanager"
            # Start the associated app pool
-           Start-WebAppPool -Name "coditech-stage-api-mediamanager"
+           Start-WebAppPool -Name "pahpc-api-mediamanager"
 
   organisation_api_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
+    runs-on: [self-hosted, Windows, x64, coditech_pahpc]
     needs: coditech_build
     if: github.event.inputs.organisation_api_deploy == 'true'
 
@@ -158,71 +153,45 @@ jobs:
       - name: Stop Organisation IIS Site and App Pool
         run: |
            # Stop the IIS site
-           Stop-WebSite -Name "coditech-stage-api-organisation" 
+           Stop-WebSite -Name "pahpc-api-organisation" 
            # Stop the associated app pool
-           Stop-WebAppPool -Name "coditech-stage-api-organisation"
+           Stop-WebAppPool -Name "pahpc-api-organisation"
 
            # Wait for a few seconds (optional, if needed)
            Start-Sleep -Seconds 5
 
       - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.Organisation\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\Organisation\ -Recurse -Force 
+        run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.Organisation\bin\Release\net8.0\* -Destination C:\HostingSites\PAHPC\Organisation\ -Recurse -Force 
 
       - name: Start Organisation IIS Site and App Pool
         run: |
            # Start the IIS site
-           Start-WebSite -Name "coditech-stage-api-organisation"
+           Start-WebSite -Name "pahpc-api-organisation"
            # Start the associated app pool
-           Start-WebAppPool -Name "coditech-stage-api-organisation"
+           Start-WebAppPool -Name "pahpc-api-organisation"
            
-  hospitalmanagementsystem_api_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
-    needs: coditech_build
-    if: github.event.inputs.hospitalmanagementsystem_api_deploy == 'true'
+  # payment_api_deploy:
+  #   runs-on: [self-hosted, Windows, x64, coditech_pahpc]
+  #   needs: coditech_build
+  #   if: github.event.inputs.payment_api_deploy == 'true'
 
-    steps:
-      - name: Stop hospitalmanagementsystem IIS Site and App Pool
-        run: |
-           # Stop the IIS site
-           Stop-WebSite -Name "coditech-stage-api-hospitalmanagementsystem" 
-           # Stop the associated app pool
-           Stop-WebAppPool -Name "coditech-stage-api-hospitalmanagementsystem"
+  #   steps:
+  #     - name: Stop payment IIS Site and App Pool
+  #       run: |
+  #          # Stop the IIS site
+  #          Stop-WebSite -Name "pahpc-api-payment" 
+  #          # Stop the associated app pool
+  #          Stop-WebAppPool -Name "pahpc-api-payment"
 
-           # Wait for a few seconds (optional, if needed)
-           Start-Sleep -Seconds 5
+  #          # Wait for a few seconds (optional, if needed)
+  #          Start-Sleep -Seconds 5
 
-      - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.HospitalManagementSystem\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\HMS\ -Recurse -Force 
+  #     - name: Copy Build file
+  #       run: Copy-Item -Path C:\GitAction\PAHPC\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.Payment\bin\Release\net8.0\* -Destination C:\HostingSites\PAHPC\payment\ -Recurse -Force 
 
-      - name: Start hospitalmanagementsystem IIS Site and App Pool
-        run: |
-           # Start the IIS site
-           Start-WebSite -Name "coditech-stage-api-hospitalmanagementsystem"
-           # Start the associated app pool
-           Start-WebAppPool -Name "coditech-stage-api-hospitalmanagementsystem"
-
-  payment_api_deploy:
-    runs-on: [self-hosted, Windows, x64, coditech_Stage]
-    needs: coditech_build
-    if: github.event.inputs.payment_api_deploy == 'true'
-
-    steps:
-      - name: Stop payment IIS Site and App Pool
-        run: |
-           # Stop the IIS site
-           Stop-WebSite -Name "coditech-stage-api-payment" 
-           # Stop the associated app pool
-           Stop-WebAppPool -Name "coditech-stage-api-payment"
-
-           # Wait for a few seconds (optional, if needed)
-           Start-Sleep -Seconds 5
-
-      - name: Copy Build file
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\API\Coditech.Engine.Payment\bin\Release\net8.0\* -Destination C:\HostingSites\CoditechStage\payment\ -Recurse -Force 
-
-      - name: Start payment IIS Site and App Pool
-        run: |
-           # Start the IIS site
-           Start-WebSite -Name "coditech-stage-api-payment"
-           # Start the associated app pool
-           Start-WebAppPool -Name "coditech-stage-api-payment"
+  #     - name: Start payment IIS Site and App Pool
+  #       run: |
+  #          # Start the IIS site
+  #          Start-WebSite -Name "pahpc-api-payment"
+  #          # Start the associated app pool
+  #          Start-WebAppPool -Name "pahpc-api-payment"
