--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -14,16 +14,16 @@
     "DeletionInterval": "5"
   },
   "ConnectionStrings": {
-    "CoditechDatabase": "Server=108.181.194.83;Database=PoweredAthletesProductionDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
+    "CoditechDatabase": "Server=83.147.36.233;Database=PoweredAthletesProductionDB;User Id=sa;Password=dynageprod#01; TrustServerCertificate=True"
   },
   "appsettings": {
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
     "Scheme": "http://",
-    "ApiDomainName": "coditech.co.in",
-    "ClientName": "coditech",
-    "EnvironmentName": "stage",
+    "ApiDomainName": "poweredathletes.in",
+    "ClientName": "pahpc",
+    "EnvironmentName": "prod",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
     "CookieExpiresValue": "2",
@@ -38,12 +38,12 @@
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/GymImage.jpg",
-    "IsDefaultTheme": "true",
+    "IsDefaultTheme": "false",
     "ThemeColor": "red",
     "DefaultDashboardDataDays": "30",
     "DashboardDays": "0,1,7,15,30",
     "MaintenanceMode": "false",
-    "ApplicationCode": "",
+    "ApplicationCode": "pahpc",
     "DashboardUrl": "/dashboard/index"
   },
   "AllowedHosts": "*"
