--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@
 /Coditech.Project/API/APIServices/Coditech.Organisation.Service/obj
 /Coditech.Project/API/APIServices/Coditech.Payment.Service/bin
 /Coditech.Project/API/APIServices/Coditech.Payment.Service/obj
+/SDKMerge
