--- a/Coditech.Project/API/APIServices/Coditech.Organisation.Service/Coditech.Organisation.Service.csproj
+++ b/Coditech.Project/API/APIServices/Coditech.Organisation.Service/Coditech.Organisation.Service.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Common.Helper\Coditech.Common.Helper.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
+    <ProjectReference Include="..\..\..\Common\Coditech.Hangfire\Coditech.Hangfire.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
     <ProjectReference Include="..\..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
     <ProjectReference Include="..\..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
