--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -35,6 +35,7 @@
     "AuthenticationSlidingExpiration": "true",
     "NotificationMessagesIsFadeOut": "true",
     "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
+    "ApplicationLogoSmallPath": "/Data/ApplicationImages/ApplicationSmallLogo.png",
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
