--- a/.github/workflows/coditech_stage.yml
+++ b/.github/workflows/coditech_stage.yml
@@ -78,8 +78,8 @@ jobs:
         run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\wwwroot\*  -Destination C:\HostingSites\CoditechStage\Admin\wwwroot\ -Recurse -Force
       - name: Copy Build views
         run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Admin\Coditech.Admin\Views\*  -Destination C:\HostingSites\CoditechStage\Admin\Views\ -Recurse -Force
-      - name: Copy Build report folder
-        run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Coditech.Engine.Admin\Reports\*  -Destination C:\HostingSites\CoditechStage\Admin\Reports\ -Recurse -Force
+      # - name: Copy Build report folder
+        # run: Copy-Item -Path C:\GitAction\CoditechStage\_work\Coditech\Coditech\Coditech.Project\Coditech.Engine.Admin\Reports\*  -Destination C:\HostingSites\CoditechStage\Admin\Reports\ -Recurse -Force
 
       - name: Start ADMIN IIS Site and App Pool
         run: |
