--- a/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
+++ b/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
@@ -31,7 +31,7 @@
 	</ItemGroup>
 	
 	<Target Name="CopySharedLibrariesDll" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
-		<Copy SourceFiles="$(OutputPath)Coditech.MediaManager.Service.dll" DestinationFolder="$(SolutionDir)..\SDKMerge\DLL\" />
+		<Copy SourceFiles="$(OutputPath)Coditech.MediaManager.Service.dll" DestinationFolder="$(SolutionDir)..\SDKMerge\SharedLibraries\" />
 		<Copy SourceFiles="$(ProjectDir)appsettings.json" DestinationFolder="$(SolutionDir)..\SDKMerge\Appsetting\MediaManager\" />
 	</Target>
 </Project>
