--- a/Coditech.Project/API/Coditech.Engine.Payment/Coditech.Engine.Payment.csproj
+++ b/Coditech.Project/API/Coditech.Engine.Payment/Coditech.Engine.Payment.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 	
 	<Target Name="CopySharedLibrariesDll" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
-		<Copy SourceFiles="$(OutputPath)Coditech.Payment.Service.dll" DestinationFolder="$(SolutionDir)..\SDKMerge\DLL\" />
+		<Copy SourceFiles="$(OutputPath)Coditech.Payment.Service.dll" DestinationFolder="$(SolutionDir)..\SDKMerge\SharedLibraries\" />
 		<Copy SourceFiles="$(ProjectDir)appsettings.json" DestinationFolder="$(SolutionDir)..\SDKMerge\Appsetting\Payment\" />
 	</Target>
 </Project>
