--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -40,7 +40,7 @@
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
     "IsDefaultTheme": "true",
-    "ThemeColor": "red",
+    "ThemeColor": "brown.css",
     "DefaultDashboardDataDays": "30",
     "DashboardDays": "0,1,7,15,30",
     "MaintenanceMode": "false",
