Added xUnit Test case project

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,5 @@
 /SDKMerge
 /Coditech.Project/Common/Coditech.Hangfire/bin
 /Coditech.Project/Common/Coditech.Hangfire/obj
+/Coditech.Project/Coditech.XUnitTestCase/obj
+/Coditech.Project/Coditech.XUnitTestCase/bin
