--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -16,35 +16,37 @@
     "ConnectionStrings": {
         "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
     },
-    "appsettings": {
-        "CoditechApiUriItemSeparator": ",",
-        "CoditechCommaReplacer": "^",
-        "CoditechApiUriKeyValueSeparator": "~",
-        "Scheme": "http://",
-        "ApiDomainName": "coditech.co.in",
-        "ClientName": "coditech",
-        "EnvironmentName": "dev",
-        "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
-        //Cookie setting.
-        "CookieExpiresValue": "2",
-        "IsCookieHttpOnly": "false",
-        "IsCookieSecure": "false",
-        "EnableFileLogging": "0",
-        // This key is used to set the expire time of login cookie.
-        "AuthenticationCookieExpireTimeSpan": "20",
-        "AuthenticationSlidingExpiration": "true",
-        "NotificationMessagesIsFadeOut": "true",
-        "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
-        "ApplicationLogoSmallPath": "/Data/ApplicationImages/ApplicationSmallLogo.png",
-        "ApplicationTitle": "Admin Application",
-        "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
-        "IsDefaultTheme": "true",
-        "ThemeColor": "brown.css",
-        "DefaultDashboardDataDays": "30",
-        "DashboardDays": "0,1,7,15,30",
-        "MaintenanceMode": "false",
-        "ApplicationCode": "",
-        "DashboardUrl": "/dashboard/index"
-    },
+  "appsettings": {
+    "CoditechApiUriItemSeparator": ",",
+    "CoditechCommaReplacer": "^",
+    "CoditechApiUriKeyValueSeparator": "~",
+    "Scheme": "http://",
+    "ApiDomainName": "coditech.co.in",
+    "ClientName": "coditech",
+    "EnvironmentName": "dev",
+    "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
+    //Cookie setting.
+    "CookieExpiresValue": "2",
+    "IsCookieHttpOnly": "false",
+    "IsCookieSecure": "false",
+    "EnableFileLogging": "0",
+    // This key is used to set the expire time of login cookie.
+    "AuthenticationCookieExpireTimeSpan": "20",
+    "AuthenticationSlidingExpiration": "true",
+    "NotificationMessagesIsFadeOut": "true",
+    "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
+    "ApplicationLogoSmallPath": "/Data/ApplicationImages/ApplicationSmallLogo.png",
+    "ApplicationTitle": "Admin Application",
+    "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
+    "IsDefaultTheme": "true",
+    "ThemeColor": "brown.css",
+    "DefaultDashboardDataDays": "30",
+    "DashboardDays": "0,1,7,15,30",
+    "MaintenanceMode": "false",
+    "ApplicationCode": "",
+    "EncryptionKey": "MySecretKey12345",
+    "EncryptionIV": "MySecretIV123456",
+    "DashboardUrl": "/dashboard/index"
+  },
     "AllowedHosts": "*"
 }
