Code Check in for url encryption false and true

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -46,6 +46,7 @@
     "ApplicationCode": "",
     "EncryptionKey": "MySecretKey12345",
     "EncryptionIV": "MySecretIV123456",
+    "IsEncryption": "False",
     "DashboardUrl": "/dashboard/index"
   },
     "AllowedHosts": "*"
