--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -46,7 +46,7 @@
     "ApplicationCode": "",
     "EncryptionKey": "MySecretKey12345",
     "EncryptionIV": "MySecretIV123456",
-    "IsEncryption": "False",
+    "IsEncryption": "false",
     "DashboardUrl": "/dashboard/index"
   },
     "AllowedHosts": "*"
