--- a/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
@@ -23,7 +23,9 @@
     "ApiDomainRequestKey": "954FA6B4-132F-439E-BEA9-48730D3442B0",
     "ResetPasswordExpriedTimeInMinute": "10",
     "JoiningCodeLength": "5",
-    "LogMessageRetentionPeriodTimeInDays": "30"
+    "LogMessageRetentionPeriodTimeInDays": "30",
+    "UserLoginAttempts": "5",
+    "UserAccountLockTimeInMinutes": "5"
   },
   "HangfireConfigSection": {
     //If the key value is set it as true we can see hangfire dashboard.
